--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>Udacity Todos Goals</title>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/redux/3.7.2/redux.min.js'></script>
@@ -9,11 +10,12 @@
   <script src='https://tylermcginnis.com/goals-todos-api/index.js'></script>
   <script src='https://unpkg.com/redux-thunk@2.2.0/dist/redux-thunk.min.js'></script>
 </head>
+
 <body>
   <div id='app'></div>
 
   <script type='text/javascript'>
-    function generateId () {
+    function generateId() {
       return Math.random().toString(36).substring(2) + (new Date()).getTime().toString(36);
     }
 
@@ -25,42 +27,42 @@
     const REMOVE_GOAL = 'REMOVE_GOAL'
     const RECEIVE_DATA = 'RECEIVE_DATA'
 
-    function addTodoAction (todo) {
+    function addTodoAction(todo) {
       return {
         type: ADD_TODO,
         todo,
       }
     }
 
-    function removeTodoAction (id) {
+    function removeTodoAction(id) {
       return {
         type: REMOVE_TODO,
         id,
       }
     }
 
-    function toggleTodoAction (id) {
+    function toggleTodoAction(id) {
       return {
         type: TOGGLE_TODO,
         id,
       }
     }
 
-    function addGoalAction (goal) {
+    function addGoalAction(goal) {
       return {
         type: ADD_GOAL,
         goal,
       }
     }
 
-    function removeGoalAction (id) {
+    function removeGoalAction(id) {
       return {
         type: REMOVE_GOAL,
         id,
       }
     }
 
-    function receiveDataAction (todos, goals) {
+    function receiveDataAction(todos, goals) {
       return {
         type: RECEIVE_DATA,
         todos,
@@ -68,7 +70,20 @@
       }
     }
 
-    function handleDeleteTodo (todo) {
+    function handleAddTodo(name, cb) {
+      return (dispatch) => {
+        return API.saveTodo(name)
+          .then((todo) => {
+            dispatch(addTodoAction(todo))
+            cb()
+          })
+          .catch(() => {
+            alert('There was an error. Try again.')
+          })
+      }
+    }
+
+    function handleDeleteTodo(todo) {
       return (dispatch) => {
         dispatch(removeTodoAction(todo.id))
 
@@ -80,40 +95,86 @@
       }
     }
 
-    function todos (state = [], action) {
-      switch(action.type) {
-        case ADD_TODO :
+    function handleToggle(id) {
+      return (dispatch) => {
+        dispatch(toggleTodoAction(id))
+
+        return API.saveTodoToggle(id)
+          .catch(() => {
+            dispatch(toggleTodoAction(id))
+            alert('An error occurred. Try again.')
+          })
+      }
+    }
+
+    function handleAddGoal(name, cb) {
+      return (dispatch) => {
+        return API.saveGoal(name)
+          .then((goal) => {
+            dispatch(addGoalAction(goal))
+            cb()
+          })
+          .catch(() => alert('There was an error. Try again.'))
+      }
+    }
+
+    function handleDeleteGoal(goal) {
+      return (dispatch) => {
+        dispatch(removeGoalAction(goal.id))
+
+        return API.deleteGoal(goal.id)
+          .catch(() => {
+            dispatch(addGoalAction(goal))
+            alert('An error occurred. Try again.')
+          })
+      }
+    }
+
+    function handleInitialData() {
+      return (dispatch) => {
+        return Promise.all([
+          API.fetchTodos(),
+          API.fetchGoals()
+        ]).then(([todos, goals]) => {
+          dispatch(receiveDataAction(todos, goals))
+        })
+      }
+    }
+
+    function todos(state = [], action) {
+      switch (action.type) {
+        case ADD_TODO:
           return state.concat([action.todo])
-        case REMOVE_TODO :
+        case REMOVE_TODO:
           return state.filter((todo) => todo.id !== action.id)
-        case TOGGLE_TODO :
+        case TOGGLE_TODO:
           return state.map((todo) => todo.id !== action.id ? todo :
             Object.assign({}, todo, { complete: !todo.complete }))
-        case RECEIVE_DATA :
+        case RECEIVE_DATA:
           return action.todos
-        default :
+        default:
           return state
       }
     }
 
-    function goals (state = [], action) {
-      switch(action.type) {
-        case ADD_GOAL :
+    function goals(state = [], action) {
+      switch (action.type) {
+        case ADD_GOAL:
           return state.concat([action.goal])
-        case REMOVE_GOAL :
+        case REMOVE_GOAL:
           return state.filter((goal) => goal.id !== action.id)
-        case RECEIVE_DATA :
+        case RECEIVE_DATA:
           return action.goals
-        default :
+        default:
           return state
       }
     }
 
-    function loading (state = true, action) {
-      switch(action.type) {
-        case RECEIVE_DATA :
+    function loading(state = true, action) {
+      switch (action.type) {
+        case RECEIVE_DATA:
           return false
-        default :
+        default:
           return state
       }
     }
@@ -138,9 +199,9 @@
 
     const logger = (store) => (next) => (action) => {
       console.group(action.type)
-        console.log('The action: ', action)
-        const result = next(action)
-        console.log('The new state: ', store.getState())
+      console.log('The action: ', action)
+      const result = next(action)
+      console.log('The new state: ', store.getState())
       console.groupEnd()
       return result
     }
@@ -153,15 +214,15 @@
   </script>
 
   <script type='text/babel'>
-    function List (props) {
+    function List(props) {
       return (
         <ul>
           {props.items.map((item) => (
             <li key={item.id}>
               <span
                 onClick={() => props.toggle && props.toggle(item.id)}
-                style={{textDecoration: item.complete ? 'line-through' : 'none'}}>
-                  {item.name}
+                style={{ textDecoration: item.complete ? 'line-through' : 'none' }}>
+                {item.name}
               </span>
               <button onClick={() => props.remove(item)}>
                 X
@@ -176,26 +237,16 @@
       addItem = (e) => {
         e.preventDefault()
 
-        return API.saveTodo(this.input.value)
-          .then((todo) => {
-            this.props.store.dispatch(addTodoAction(todo))
-            this.input.value = ''
-          })
-          .catch(() => {
-            alert('There was an error. Try again.')
-          })
+        this.props.store.dispatch(handleAddTodo(
+          this.input.value,
+          () => this.input.value = ''
+        ))
       }
       removeItem = (todo) => {
         this.props.store.dispatch(handleDeleteTodo(todo))
       }
       toggleItem = (id) => {
-        this.props.store.dispatch(toggleTodoAction(id))
-
-        return API.saveTodoToggle(id)
-          .catch(() => {
-            this.props.store.dispatch(toggleTodoAction(id))
-            alert('An error occurred. Try again.')
-          })
+        this.props.store.dispatch(handleToggle(id))
       }
       render() {
         return (
@@ -218,25 +269,30 @@
       }
     }
 
+    class ConnectedTodos extends React.Component {
+      render() {
+        return (
+          <Context.Consumer>
+            {(store) => {
+              const { todos } = store.getState()
+
+              return <Todos todos={todos} dispatch={store.dispatch} />
+            }}
+          </Context.Consumer>
+        )
+      }
+    }
+
     class Goals extends React.Component {
       addItem = (e) => {
         e.preventDefault()
-
-        return API.saveGoal(this.input.value)
-          .then((goal) => {
-            this.props.store.dispatch(addGoalAction(goal))
-            this.input.value = ''
-          })
-          .catch(() => alert('There was an error. Try again.'))
+        this.props.store.dispatch(handleAddGoal(
+          this.input.value,
+          () => this.input.value = ''
+        ))
       }
       removeItem = (goal) => {
-        this.props.store.dispatch(removeGoalAction(goal.id))
-
-        return API.deleteGoal(goal.id)
-          .catch(() => {
-            this.props.store.dispatch(addGoalAction(goal))
-            alert('An error occurred. Try again.')
-          })
+        this.props.dispatch(handleDeleteGoal(goal))
       }
       render() {
         return (
@@ -258,22 +314,31 @@
       }
     }
 
+    class ConnectedGoals extends React.Component {
+      render() {
+        return (
+          <Context.Consumer>
+            {(store) => {
+              const { goals } = store.getState()
+
+              return <Goals goals={goals} dispatch={store.dispatch} />
+            }}
+          </Context.Consumer>
+        )
+      }
+    }
+
     class App extends React.Component {
-      componentDidMount () {
+      componentDidMount() {
         const { store } = this.props
 
-        Promise.all([
-          API.fetchTodos(),
-          API.fetchGoals()
-        ]).then(([ todos, goals ]) => {
-          store.dispatch(receiveDataAction(todos, goals))
-        })
+        store.dispatch(handleInitialData())
 
         store.subscribe(() => this.forceUpdate())
       }
       render() {
         const { store } = this.props
-        const { todos, goals, loading } = store.getState()
+        const { loading } = store.getState()
 
         if (loading === true) {
           return <h3>Loading</h3>
@@ -281,15 +346,39 @@
 
         return (
           <div>
-            <Todos todos={todos} store={this.props.store} />
-            <Goals goals={goals} store={this.props.store} />
+            <ConnectedTodos />
+            <ConnectedGoals />
           </div>
         )
       }
     }
 
+    class ConnectedApp extends React.Component {
+      render() {
+        return (
+          <Context.Consumer>
+            {(store) => (
+              <App store={store} />
+            )}
+          </Context.Consumer>
+        )
+      }
+    }
+
+    const Context = React.createContext()
+
+    class Provider extends React.Component {
+      render() {
+        return (
+          <Context.Provider value={this.props.store}>
+            {this.props.children}
+          </Context.Provider>
+        )
+      }
+    }
+
     ReactDOM.render(
-      <App store={store}/>,
+      <App store={store} />,
       document.getElementById('app')
     )
   </script>
