Create constant connected App, constConnectedTodos and const ConnectedGoals

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
       }
     }
 
-    function goals(state = [], action) {
+    function goals (state = [], action) {
       switch (action.type) {
         case ADD_GOAL:
           return state.concat([action.goal])
@@ -237,16 +237,16 @@
       addItem = (e) => {
         e.preventDefault()
 
-        this.props.store.dispatch(handleAddTodo(
+        this.props.dispatch(handleAddTodo(
           this.input.value,
           () => this.input.value = ''
         ))
       }
       removeItem = (todo) => {
-        this.props.store.dispatch(handleDeleteTodo(todo))
+        this.props.dispatch(handleDeleteTodo(todo))
       }
       toggleItem = (id) => {
-        this.props.store.dispatch(handleToggle(id))
+        this.props.dispatch(handleToggle(id))
       }
       render() {
         return (
@@ -269,24 +269,14 @@
       }
     }
 
-    class ConnectedTodos extends React.Component {
-      render() {
-        return (
-          <Context.Consumer>
-            {(store) => {
-              const { todos } = store.getState()
-
-              return <Todos todos={todos} dispatch={store.dispatch} />
-            }}
-          </Context.Consumer>
-        )
-      }
-    }
+    const ConnectedTodos = connect((state) =>({
+      todos:state.todos
+    })) (Todos)
 
     class Goals extends React.Component {
       addItem = (e) => {
         e.preventDefault()
-        this.props.store.dispatch(handleAddGoal(
+        this.props.dispatch(handleAddGoal(
           this.input.value,
           () => this.input.value = ''
         ))
@@ -314,33 +304,19 @@
       }
     }
 
-    class ConnectedGoals extends React.Component {
-      render() {
-        return (
-          <Context.Consumer>
-            {(store) => {
-              const { goals } = store.getState()
-
-              return <Goals goals={goals} dispatch={store.dispatch} />
-            }}
-          </Context.Consumer>
-        )
-      }
-    }
+    const ConnectedGoals = connect((state) => ({
+      goals: state.goals
+    }))(Goals)
 
     class App extends React.Component {
       componentDidMount() {
-        const { store } = this.props
+        const { dispatch } = this.props
 
-        store.dispatch(handleInitialData())
-
-        store.subscribe(() => this.forceUpdate())
+        dispatch(handleInitialData())
       }
       render() {
-        const { store } = this.props
-        const { loading } = store.getState()
-
-        if (loading === true) {
+        
+        if (this.props.loading === true) {
           return <h3>Loading</h3>
         }
 
@@ -353,17 +329,10 @@
       }
     }
 
-    class ConnectedApp extends React.Component {
-      render() {
-        return (
-          <Context.Consumer>
-            {(store) => (
-              <App store={store} />
-            )}
-          </Context.Consumer>
-        )
-      }
-    }
+    const ConnectedApp = connect((state) => ({
+      loading: state.loading
+    }))(App)
+    
 
     const Context = React.createContext()
 
@@ -376,7 +345,7 @@
         )
       }
     }
-
+   
     ReactDOM.render(
       <App store={store} />,
       document.getElementById('app')
